kubernetes/7-sample-app/2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-sample-app
  namespace: sample-app-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-sample-app
  template:
    metadata:
      labels:
        app: nginx-sample-app
    spec:
      containers:
      - name: nginx-sample-app
        image: nginx:latest
        command:
        - /bin/sh
        - -c
        - "echo $(hostname) > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
