kubernetes/7-sample-app/3-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-sample-app-loadbalancer
  namespace: sample-app-namespace
spec:
  selector:
    app: nginx-sample-app
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  # type: LoadBalancer
  type: ClusterIP # With Nginx Ingress Controller, we use ClusterIP
