kubernetes/7-sample-app/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-ingress
  namespace: sample-app-namespace
  labels:
    app.kubernetes.io/name: sample-app-ingress
spec:
  ingressClassName: nginx
  rules: # Done with wildcarding, best to set up a hostname for production
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-sample-app-loadbalancer
            port:
              number: 80
